Fix: wrong initial height + jumping effect on push element when loading page

--- a/resources/assets/sass/layout/_header.scss
+++ b/resources/assets/sass/layout/_header.scss
@@ -162,3 +162,12 @@
     font-size: rem(20px);
   }
 }
+
+.js-header-push {
+  // Set initial min-height to prevent jumping of content height when loading page
+  min-height: 95px;
+
+  @media #{$medium} {
+    min-height: 112px;
+  }
+}
